# block_compression_benchmark

./: .gitignore  CMakeLists.txt  report.txt  run.bat  run.py
src/benchmark/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  codec.cpp  codec.hpp  compressonator_codec.cpp  compressonator_codec.hpp  decompress_impl.cpp  decompress_impl.hpp  directxtex_codec.cpp  directxtex_codec.hpp  main.cpp  nvtt_codec.cpp  nvtt_codec.hpp
src/png_generator/: CMakeLists.txt  main.cpp
src/png_utils/: CMakeLists.txt  png_utils.cpp  png_utils.hpp
